﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Bug fixes:
		-[Extensions] RegisterDecorator extension methods did not check whether the registered decorator type
		 contained a constructor argument that the type implemented. This allowed registration of decorators
		 that could never be used. (work item 18956)


Version 1.6.1 (v1.6.1 RTM) 2012-12-12
	General description:
		The integration packages that were targetted at .NET 4.0 were incorrectly targetted at .NET 4.5. This
		was caused by a misconfiguration in the build script. This made it impossible to use those packages
		when .NET 4.5 was not installed.


Version 1.6.0.12318 (v1.6.0 RTM) 2012-11-13
	General description:
		A few minor bug fixes have been made to the Core and Extensions project and the behaviors of the Per
		Web Request lifestyle (RegisterPerWebRequest/SimpleInjector.Integration.Web) and Per Lifetime Scope
		(RegisterLifetimeScope/SimpleInjector.Extensions.LifetimeScoping) have been changed. Both lifestyles
		now throw an exception when an instance is trying to be resolved outside their scope. For Per Web 
		Request this means that calling GetInstance when HttpContext.Current == null will fail, instead of
		returning a transient instance. For Per Lifetime Scope this means that calling GetInstance will fail
		when no scope is defined, instead of returning a singleton instance.
	
	Breaking changes:
		-[Extensions.LifetimeScoping] now throws an exception when a per-lifetime scoped instance is requested
		 outside the context of a Lifetime Scope. The previous released returned a singleton, but this would
		 easily lead to hard to track errors.
		-[Integration.Web] now throws an exception when a per-web-request scoped instance is requested outside
		 the context of a HTTP request (when HttpContext.Current is null). The previous release returned a
		 transient, but this would easily lead to hard to track errors.

	Code changes: