@@ -7,6 +7,9 @@ Version vNext
 		-[Extensions] RegisterDecorator extension methods did not check whether the registered decorator type
 		 contained a constructor argument that the type implemented. This allowed registration of decorators
 		 that could never be used. (work item 18956)
+		-[Extensions.LifetimeScoping] Registrations made using RegisterLifetimeScope could be invalidated by
+		 other RegisterLifetimeScope registrations in case AllowOverridingRegistrations was set to true and
+		 Verify was called in between. (work item 19119)
 
 
 Version 1.6.1 (v1.6.1 RTM) 2012-12-12
